# rust_studies

./: .gitignore  README.md
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/: Cargo.toml  Dockerfile  README.md
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/Cache/Cache_Data/: 5283edf90cf4ab50_0  8f039a110928acc9_0
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/Cache/Cache_Data/index-dir/: the-real-index
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/Crashpad/: client_id
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/Crashpad/completed/: e1f1ac58-5b69-45af-bb53-71044414d73c.dmp  f4791718-d00e-4a70-ab99-ea5bff1ed5dc.dmp
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/Crashpad/pending/: 0d1718ce-ec66-4891-8e14-868b3498c1d7.dmp  62ddd681-c278-4692-911b-480aa96966ce.dmp  7e61cab2-6a66-4260-9870-6c18ffe2b775.dmp  9ad704d7-ecf7-4116-802f-124f3bfc2c98.dmp  ae315eef-6957-474c-8f9e-4bd8c5190842.dmp
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/DawnCache/: index
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/GPUCache/: index
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/Local Storage/leveldb/: LOG
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/User/globalStorage/: state.vscdb  storage.json
specialization/data_engineering_with_rust/week-3/greedy-coin-microservice/src/: lib.rs  main.rs
(+59 files in other folders)
